# Aegis

./: .env.example  .gitignore  README.md  pyproject.toml  run.py
src/: config.py  main.py
src/attacks/: advanced.py  base.py  context_manipulation.py  distraction.py  encoding.py  injection.py  logic.py  multi_turn.py  obfuscation.py  persona.py  policy_puppetry.py  role_play.py  suffix.py  virtual_ai.py
src/core/: attack_orchestrator.py  gemini_client.py  iterative.py  prompt_engine.py  scorer.py
src/db/: store.py
src/reporting/: generator.py
src/templates/: loader.py
src/templates/prompts/: aim.yaml  dan_v11.yaml  dan_v13.yaml  dan_v6.yaml  developer_mode.yaml  dude.yaml  evil_confidant.yaml  grandma_exploit.yaml  jailbroken_v2.yaml  maximum.yaml  stan.yaml
src/tui/: app.py
src/tui/styles/: app.tcss
